# ai-backend

./: .env  .env.example  .sqlxrc  Cargo.toml  dummy_data.sql  init.sql  term2.md  terminal.md
db_models/: Cargo.toml
db_models/src/: lib.rs
migrations/: 20241128000001_initial_schema.sql  20241128000002_market_trends.sql
src/: backfill.rs  create_db.rs  drop_db.rs  ingest.rs  main.rs  market_intelligence.rs  recommendations.rs  stock_optimization.rs  sync.rs  sync_changes.rs  trend_discovery.rs
src/agent/: scraper.rs
src/migration/: customer.rs  mod.rs  product.rs  receipt.rs  sale.rs
src/ml/: apriori.rs  mod.rs
